# sibyl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  sibyl.cabal  stack.yaml
data/: sales.csv
planning/: design_draft.md
src/: Sibyl.hs
src/Sibyl/: Accuracy.hs  Decomposition.hs  Forecast.hs  Model.hs  Plotting.hs  Safe.hs  Smoothing.hs  TimeSeries.hs
src/Sibyl/Internal/: Util.hs
src/Sibyl/Models/: ARIMA.hs  ETS.hs  HoltWinters.hs  NNETAR.hs  Naive.hs  SARIMA.hs  SARIMAX.hs  STLF.hs  TBATS.hs  Theta.hs  VARIMA.hs
src/Sibyl/Safe/: TimeSeries.hs
test/: Spec.hs  check-parity.sh
test/Sibyl/: AccuracySpec.hs  DecompositionSpec.hs  FacadeSpec.hs  ForecastSpec.hs  ModelSpec.hs  NaiveSpec.hs  PlottingSpec.hs  SafeTimeSeriesSpec.hs  SmoothingSpec.hs  TimeSeriesSpec.hs
