cabal-version:       2.2

name:                sibyl
version:             0.0.0.1
homepage:            https://github.com/jackiedorland/sibyl#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jackie Dorland
maintainer:          me@jackiedor.land
copyright:           2026 Jackie Dorland
category:            Statistics
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Sibyl
                       Sibyl.TimeSeries
                       Sibyl.Model
                       Sibyl.Forecast
                       Sibyl.Smoothing
                       Sibyl.Decomposition
                       Sibyl.Accuracy
                       Sibyl.Plotting
                       Sibyl.Models.Naive
                       Sibyl.Models.SARIMAX
  other-modules:       Sibyl.Internal.Util
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       vector >= 0.13,
                       statistics >= 0.16,
                       dataframe >= 0.7 && < 0.8
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/jackiedorland/sibyl

test-suite sibyl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Sibyl.AccuracySpec
                       Sibyl.DecompositionSpec
                       Sibyl.FacadeSpec
                       Sibyl.PlottingSpec
                       Sibyl.SafeTimeSeriesSpec
                       Sibyl.SmoothingSpec
                       Sibyl.TimeSeriesSpec
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sibyl,
                       hspec >= 2.11,
                       QuickCheck >= 2.14,
                       vector
  ghc-options:         -Wall